--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,17 @@
 }
 
 .circle {
-    margin:auto;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: auto;
     position: relative;
 }
 
-.phoneci {
-    position: relative;
-    /* top: 150%;
-    left: 30%; */
+.phone-1 {
+    position: absolute;
+    top: 150%;
+    left: 30%;
     transform: translate(-50%, -50%);
 
 }
