--- a/styles.css
+++ b/styles.css
@@ -6,36 +6,38 @@
     width: 100%;
 }
 
-.circlephone {
-    background-image: url(images/Screen-1.png), url(images/bg.png);
+ .circlephone  {
+    background-image: url(images/iPhone\ X\ -\ Light.png), url(images/bg.png);
+   /* background-image: url(images/Screen-1.png); */
+    /* left: 20px; */
+    background-position: center;
     background-repeat: no-repeat;
-    
-}
 
-/* .card {
-    border: none;
-    box-shadow: none;
-    margin-top: 3rem;
-    padding: 2rem;
-    width: 300px;
-    text-align: center;
-  }
-  .card:hover ~ #ball {
-    background-color: teal;
-  }
-  
-.circle {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin: auto;
-    position: relative;
-}
+    /* position: relative;
+    left: 300px; */
+    /* padding-left: 28rem; */
+    /* z-index: 1; */
+     /* margin-top: 3rem;
+    padding: 7rem; */
+ 
 
-.phone-1 {
-    position: absolute;
-    top: 150%;
-    left: 30%;
-    transform: translate(-50%, -50%);
+    /* sätt 2 att göra det på ?? */
+    /* .circlephone1 {
+        left: 500px;
+        right: 500px;
+        
+    }
 
-} */
+    .circle-1 {
+        background-image: url(images/bg.png);
+        margin: auto;
+        position:relative;
+        z-index: -1;
+    }
+
+    .screen-1 {
+        background-image: url(images/Screen-1.png);
+        position: absolute;
+        justify-content: center;
+        z-index: 1;
+    } */
