--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,10 @@
 }
 
  .circlephone  {
-    background-image: url(images/iPhone\ X\ -\ Light.png), url(images/bg.png);
+    background-image: url(images/bg.png), url(images/iPhone\ X\ -\ Light.png);
    /* background-image: url(images/Screen-1.png); */
     /* left: 20px; */
+    /* background-position: bottom; */
     background-position: center;
     background-repeat: no-repeat;
 
