--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,47 @@
 /* blå färg #1487FD */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
-.mobile img {
-    width: 100%;
+body {
+    font-family: 'Roboto', sans-serif; 
+}
 
+/* html, body {
+    font-weight: 7000;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.5;
+    font-size: 16px;
+     color: #333333; */
+    
+
+ .mobile img {
+    width: 100%;
+}
+
+ p {
+  
+    color: #8A8A8A;
+    /* font-size: 3rem; */
+    /* line-height: 1.5; */
+
+    
 }
 
 h1 {
-    font-family: 'Roboto', sans-serif;
+    color: #333333;
+    font-weight: 700;
+    margin-top: 1.5rem;
+    /* margin-left: 4rem; */
+}
+
+h3 {
+    color: #3096FE;
+    font-size: x-large;
+    font-weight: 700;
     
+}
+
+h6 {
+    color: #333333;
 }
 
 
@@ -22,6 +55,12 @@ h1 {
     text-align: center;
  }
 
+ .vertical{
+     text-align: left;
+     align-items: center;
+     margin-top: 10rem;
+     margin-left: 5rem
+ }
  
  
   /* .header-bg{
