--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,13 @@ body {
 
     
 }
-
+/* 
 h1 {
     color: #333333;
     font-weight: 700;
     margin-top: 1.5rem;
-    /* margin-left: 4rem; */
-}
+    margin-left: 4rem;
+} */
 
 h3 {
     color: #3096FE;
