--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,17 @@
 
 /* blå färg #1487FD */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 body {
     font-family: 'Roboto', sans-serif; 
 }
+
+.min-text{
+    font-size: 3rem;
+    line-height: ;
+}
+
 
 /* html, body {
     font-weight: 7000;
@@ -13,6 +20,10 @@ body {
     line-height: 1.5;
     font-size: 16px;
      color: #333333; */
+
+     /* .navbar {
+         padding-bottom: 4.5rem;
+     } */
     
  #title {
      background-image: url(images/Group\ 4634.png) , url(images/Rectangle\ 1914.png);
@@ -23,8 +34,36 @@ body {
  }
 
  #title p {
-     color: whitesmoke;
+    font-family: 'Poppins', sans-serif;
+     color: #FFFFFF;
+     font-weight: 400;
  }
+
+ #title a {
+     color:  #FFFFFF;
+     font-size: large;
+ }
+ #title h1 {
+    font-family: 'Poppins', sans-serif;
+     color:  #FFFFFF;
+     font-size: 3.5rem;
+     font-weight: 700;
+     line-height: 1.5;
+   
+
+ }
+
+ .navbar {
+
+ }
+
+ .navbar-brand {
+}
+
+.navbar-item {
+    padding:0 1rem;
+
+}
 
  .johns-knapp {
      padding: 0.7rem 1.5rem;
@@ -78,6 +117,7 @@ h6 {
      margin-top: 10rem;
      margin-left: 5rem
  }
+
  
   /* .container-fluid {
      /* 3 % till topp och botten 15% lefterright */
